<resources>
    <string name="app_name">ProjectPlanner</string>
    <string name="introduction">Introduction</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project description</string>
    <string name="features">Features</string>
    <string name="imagebutton">imageButton</string>
    <string name="skills_required">Skills Required</string>
    <string name="technologies_used">Technologies used</string>
    <string name="resources">Resources</string>
    <string name="primary_color_dark">Primary Color Dark:</string>
    <string name="accent_color">Accent Color :</string>
    <string name="primary_text_color">Primary Text Color :</string>
    <string name="secondary_text_color">Secondary Text Color :</string>
    <string name="text_on_primary_color">Text On Primary Color :</string>
    <string name="theme">Theme</string>
    <string name="primary_color">Primary Color :</string>
    <string name="see_in_layout">See in layout</string>
    <string name="colors">Colors</string>
    <string name="add_link_name_description">Add link name/description</string>
    <string name="add_link_url">Add link/URL</string>
    <string name="_119A17">#119A17</string>
    <string name="_119a17">#119A17</string>
    <string name="ff00d91c">#FF00D91C</string>
    <string name="_212121">#212121</string>
    <string name="_757575">#757575</string>
    <string name="ffffff">#FFFFFF</string>
    <string name="write_color_name">Write color name</string>
    <string name="hex_code">hex code</string>
    <string name="skills">Skills</string>
    <string name="technology">Technology</string>
    <string name="search">Search</string>
    <string name="add_your_first_task">Add Your first task</string>
    <string name="add_new_task">Add new Task</string>
    <string name="add_topic">Add topic</string>
    <string name="fabbutton">fabButton</string>
    <string name="no_bug_report_found_yet">No Bug report found yet</string>
    <string name="possible_solution_if_any">Possible solution (If any)</string>
    <string name="bug_description">Bug description</string>
    <string name="what_s_the_bug">What\'s the bug (bug name)</string>
    <string name="sort">Sort</string>
    <string name="sort_by_date_created_ASC">Sort by date (ASC)</string>
    <string name="sort_by_date_created_DESC">Sort by date (DESC)</string>
    <string name="sort_by_name_ASC">Sort by name (ASC)</string>
    <string name="sort_by_name_DESC">Sort by name (DESC)</string>
    <string name="hide_completed">Hide completed</string>
    <string name="delete_all_completed">Delete all completed</string>
    <string name="find_name_automatically">Find name automatically</string>
</resources>